Fix some layout issues

--- a/OrderCookDeliver/wwwroot/css/StyleSheet.css
+++ b/OrderCookDeliver/wwwroot/css/StyleSheet.css
@@ -217,3 +217,58 @@ h6 {
 .carousel-control .icon-right, .carousel-control .fa-chevron-right {
     right: 30px;
 }
+
+.olContent {
+    width: 100%;
+}
+    .olContent h2 {
+        color: #fff;
+        font-size: 16px;
+        padding: 9px 0 0;
+    }
+.olSearch {
+    width: 100%;
+}
+    .olSearch .inputComn{
+        margin-bottom: 0;
+    }
+.inputComn {
+    color: black;
+    font-size: 14px;
+    height: 44px;
+    width: 100%;
+
+    cursor: pointer;
+    padding: 0 15px;
+}
+
+.searchBtn {
+    background-color: #005faa;
+    border: 0 none;
+    color: #fff;
+    font-size: 16px;
+    padding: 11px 16px;
+    text-transform: uppercase;
+    cursor: pointer;
+    height: 44px;
+}
+    .searchBtn:hover {
+        background-color:#326987;
+    }
+.olSearch{
+    position: relative;
+}
+.searchIcon{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.form-control-borderless {
+    border: none;
+}
+
+    .form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
+        border: none;
+        outline: none;
+        box-shadow: none;
+    }
